Preserve unsupported properties in JSON file